# substrate-manager

./: Cargo.toml  LICENSE  README.md  new-chain.webm
src/: lib.rs
src/core/: manifest.rs  mod.rs  shell.rs
src/ops/: mod.rs  substrate_add.rs  substrate_build.rs  substrate_deploy.rs  substrate_frontend.rs  substrate_new.rs  substrate_run.rs  substrate_test.rs
src/templates/: mod.rs
src/templates/chain/: canvas.toml  cumulus.toml  frontier.toml  substrate.toml
src/util/: command_prelude.rs  config.rs  errors.rs  mod.rs  restricted_names.rs
